Wed Jan 28 21:32:24 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* thread.c: Improve documentation for Thread#value
	  [Bug #10694][ruby-core:67324][ci skip]

Tue Jan 27 16:04:19 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: added `!` command.

Tue Jan 27 15:58:23 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: added history feature for platforms which
	  lack readline.

Mon Jan 26 22:09:35 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .gitignore: ignored temporary file with git.

Mon Jan 26 18:06:03 2015  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import version 2.2.2 from
	  https://github.com/knu/ruby-electric.el.

Mon Jan 26 11:37:49 2015  Dave Stevens  <dave@crowdlab.com>

	* string.c (str_make_independent_expand): terminate String when
	  moved from heap to embedded.  [Fix GH-821].

Sun Jan 25 12:04:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (flatten): no need to call to_ary method on elements
	  beyond the given level.  [ruby-core:67637] [Bug #10748]

Sun Jan 25 00:42:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/win32/libffi.mk.tmpl: assemble without directory prefix.
	  workaround of a bug of VC12 ml, by unak at [ruby-core:67792].
	  [ruby-core:67789] [Bug #10780]

Sat Jan 24 19:56:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln_find.c (dln_find_1): search regular files only.  based on
	  the patch by Alex Coomans in [ruby-core:67766].  [Bug #10776]

Fri Jan 23 23:57:05 2015  Misumi Rize  <r@ayase-e.li>

	* vm_insnhelper.c (vm_throw_start): search the target to break
	  from a block with nested rescue, from the nested blocks.
	  [ruby-core:67765] [Bug #10775] [Fix GH-820]

Fri Jan 23 20:00:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump): use identity tables for
	  arbitrary VALUE keys, because of performance of FLONUM.
	  [Bug #10761]
